objects/copadoccmint__Callout_Log__c.object
<CustomObject>
    <fields>
        <fullName>copadoccmint__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>copado__Project__c</referenceTo>
        <relationshipLabel>Callout Logs</relationshipLabel>
        <relationshipName>Callout_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadoccmint__Response_Body__c</fullName>
        <label>Response Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copadoccmint__Status_Code__c</fullName>
        <label>Status Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoccmint__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoccmint__User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Callout Logs</relationshipLabel>
        <relationshipName>Callout_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Callout Log</label>
    <listViews>
        <fullName>Harsha_support_Callout_Log</fullName>
        <filterScope>Queue</filterScope>
        <label>Harsha support</label>
        <queue>Harsha_support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CL-{0000000000}</displayFormat>
        <label>Integration  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Callout Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>